--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prestart": "chmod +x node_modules/.bin/ts-node",
     "start": "nodemon index.ts"
   },
   "keywords": [],
