--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prestart": "chmod +x node_modules/.bin/ts-node",
     "start": "ts-node index.ts"
   },
   "keywords": [],
@@ -25,6 +26,7 @@
     "@types/multer": "^1.4.11",
     "@types/password-hash": "^1.2.24",
     "ajv": "^8.12.0",
+    "debug": "^4.3.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
