--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prestart": "chmod +x node_modules/.bin/ts-node",
     "start": "ts-node index.ts"
   },
   "keywords": [],
@@ -22,10 +21,12 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
     "@types/password-hash": "^1.2.24",
     "ajv": "^8.12.0",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
