--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "@types/mailgen": "^2.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.15",
     "@types/password-hash": "^1.2.24",
     "ajv": "^8.12.0",
     "cors": "^2.8.5",
@@ -31,8 +33,10 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.28",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "password-hash": "^1.2.2"
   }
 }
